feat: Implement provider constants retrieval and enhance provider response structure